intTests/test_type_errors/err010.log.good
Loading file "err010.saw"
Type errors:
  err010.saw:12:1-12:9: Monadic bind with the wrong monad; found LLVMSetup but expected TopLevel
  err010.saw:12:1-12:9: This creates the action but does not execute it; if you meant to do that, prefix the expression with return

FAILED
